AirDatepicker anche in back-end Disattivazione giorni e periodi di chiusura anche in back-end Bug mancata traduzione widget prenotazioni Bug orario prenotazione scaduta non visibile

--- a/css/wprb-admin.css
+++ b/css/wprb-admin.css
@@ -396,8 +396,8 @@ input#wprb-last-minute-date {
 	cursor: inherit;
 }
 
-.booking-hours ul li.not-available input:hover,
-.booking-hours ul li.not-available input.active {
+/*.booking-hours ul li.not-available input.active,*/
+.booking-hours ul li.not-available input:hover {
 	color: inherit;
 	background: inherit;
 }
